[project]
name = "saat-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "argparse>=1.4.0",
    "datetime>=5.5",
    "matplotlib>=3.7.5",
    "networkx>=3.1",
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "tqdm>=4.67.1",
]
